Complete remediation sprint 19 performance